# tempdir-shell

./: Cargo.toml
src/: main.rs
