[package]
name = "tempdir-shell"
description = "Execute a shell within a temporary directory, removing it after the shell exits"
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/nathan-at-least/tempdir-shell"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "0.3.7"

[dependencies.clap]
version = "3.1.18"
features = [
  "derive",
]
